--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@react-google-maps/api": "^2.20.8",
 		"dotenv": "^17.2.3",
 		"google-map-react": "^2.2.5",
 		"motion": "^12.25.0",
