--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,6 @@
 			"source": "/(.*)",
 			"headers": [
 				{
-					"key": "Content-Security-Policy",
-					"value": "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self' data: https://*.web3forms.com; connect-src 'self' https://api.web3forms.com; base-uri 'self'; form-action 'self' https://api.web3forms.com; frame-ancestors 'none'; object-src 'none'; upgrade-insecure-requests;"
-				},
-				{
 					"key": "Strict-Transport-Security",
 					"value": "max-age=63072000; includeSubDomains; preload"
 				},
@@ -15,14 +11,13 @@
 					"key": "X-Content-Type-Options",
 					"value": "nosniff"
 				},
-
-				{
-					"key": "X-Frame-Options",
-					"value": "DENY"
-				},
 				{
 					"key": "Referrer-Policy",
 					"value": "strict-origin-when-cross-origin"
+				},
+				{
+					"key": "Content-Security-Policy",
+					"value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.googletagmanager.com https://*.googleapis.com https://*.gstatic.com; style-src 'self' 'unsafe-inline' https://*.googleapis.com; font-src 'self' data: https://*.gstatic.com; img-src 'self' data: https://*.googleapis.com https://*.gstatic.com https://*.ggpht.com https://*.googleusercontent.com; connect-src 'self' https://*.google-analytics.com https://*.googletagmanager.com https://*.googleapis.com; frame-src 'self' https://www.google.com https://*.google.com https://www.youtube.com https://*.youtube.com;"
 				}
 			]
 		},
